# screen-go

./: .gitignore  README.md  package.json
appDir/preload/: preload.js
docs/superpowers/plans/: 2026-05-26-freertos-weather-clock.md
docs/superpowers/specs/: 2026-05-26-freertos-weather-clock-design.md
gomoku/: index.html
gomoku/docs/superpowers/plans/: 2026-06-03-gomoku-mcts-optimization.md
gomoku/docs/superpowers/specs/: 2026-06-03-gomoku-mcts-optimization-design.md
gomoku/js/: ai.js  board.js  constants.js  evaluate.js  mcts.js
screen-go/: CHANGELOG.md  README.md
screen-go/appDir/main/: main.js
screen-go/src/components/: FuncBox.vue  ImageConfig.vue
screen-go/src/components/screen/: ScreenEditor.vue
screen-go/src/window/: HomePage.vue
src/components/: CommitBox.vue  ImageConfig.vue
weather_clock/: CMakeLists.txt
weather_clock/main/: CMakeLists.txt  main.c
weather_clock/main/drivers/: oled_ssd1306.c  oled_ssd1306.h
weather_clock/main/fonts/: font_8x16.c  font_8x16.h
weather_clock/main/network/: http_client.c  http_client.h  wifi.c  wifi.h
weather_clock/main/shared/: config.h  display_data.h
weather_clock/main/tasks/: clock_task.c  display_task.c  network_task.c  power_task.c  watchdog_task.c
